WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60496
Command-~/Exposé to another window while <video> is in full screen, breaks Safari, eventually leading to crash
https://bugs.webkit.org/show_bug.cgi?id=60496
Summary
Command-~/Exposé to another window while <video> is in full screen, breaks Sa...
Jer Noble
Reported
2011-05-09 12:37:35 PDT
Using Command-~ or Exposé to switch to another Safari window while a <video> element is in full screen mode results in broken behavior: contentless windows, mispositioned full-screen window, and ultimately crashing when closing windows.
Attachments
Patch
(9.60 KB, patch)
2011-05-09 12:45 PDT
,
Jer Noble
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-05-09 12:38:00 PDT
<
rdar://problem/9380856
>
Jer Noble
Comment 2
2011-05-09 12:45:59 PDT
Created
attachment 92832
[details]
Patch
Darin Adler
Comment 3
2011-05-09 12:49:02 PDT
Comment on
attachment 92832
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92832&action=review
> Source/WebKit/mac/WebView/WebFullScreenController.mm:275 > + WebView* webView = [self webView]; > + NSWindow* webWindow = [webView window];
This doesn’t follow our usual style of putting the * in the traditional place for Objective-C classes.
> Source/WebKit/mac/WebView/WebFullScreenController.mm:292 > + // In Lion, NSWindow will animate into and out of orderOut operations. Supress that
Extra space here after period. Misspelling of suppress.
> Source/WebKit/mac/WebView/WebFullScreenController.mm:531 > + NSWindow* webWindow = [[self webView] window];
Same style issue here.
> Source/WebKit/mac/WebView/WebFullScreenController.mm:533 > + // In Lion, NSWindow will animate into and out of orderOut operations. Supress that
Same mistakes here.
> Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:256 > + NSWindow* webWindow = [_webViewPlaceholder.get() window]; > +#if !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD) > + // In Lion, NSWindow will animate into and out of orderOut operations. Supress that
Same issue again.
Jer Noble
Comment 4
2011-05-09 16:50:40 PDT
Committed
r86107
: <
http://trac.webkit.org/changeset/86107
>
Ademar Reis
Comment 5
2011-06-03 14:11:17 PDT
Revision
r86107
cherry-picked into qtwebkit-2.2 with commit 6fe6792 <
http://gitorious.org/webkit/qtwebkit/commit/6fe6792
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug