2011-05-09  Jeremy Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        Command-~/Exposé to another window while <video> is in full screen, breaks Safari, eventually leading to crash
        https://bugs.webkit.org/show_bug.cgi?id=60496

        When animating into and out of full screen, order out and back in the original webView window,
        disabling animations when necessary.  The exitFullscreen method was targeting the wrong window,
        as the webView is hosted in the full screen window when we ask for it's parent window.

        * WebView/WebFullScreenController.mm:
        (-[WebFullScreenController windowDidEnterFullscreen:]):
        (-[WebFullScreenController exitFullscreen]):
2011-05-09  Jeremy Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Command-~/Exposé to another window while <video> is in full screen, breaks Safari, eventually leading to crash
        https://bugs.webkit.org/show_bug.cgi?id=60496

        When animating into and out of full screen, order out and back in the original webView window,
        disabling animations when necessary. The beganExitFullScreenAnimation method was targeting the wrong window,
        as the webView is hosted in the full screen window when we ask for it's parent window.

        * UIProcess/mac/WKFullScreenWindowController.mm:
        (-[WKFullScreenWindowController finishedEnterFullScreenAnimation:]):
        (-[WKFullScreenWindowController beganExitFullScreenAnimation]):

Canonical link: https://commits.webkit.org/75780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86107 268f45cc-cd09-0410-ab3c-d52691b4dbfc